--- a/Application/Phone/View/template/main.html
+++ b/Application/Phone/View/template/main.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="__PUBLIC__/css/weui.min.css">
     <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=19">
 
-    <block name="head"></block>
+    <block name="css"></block>
 
 </head>
 <body>
@@ -48,6 +48,6 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script type='text/javascript' src="__PUBLIC__/js/main.js" charset='utf-8'></script>
-<block name="footer"></block>
+<block name="script"></block>
 </body>
 </html>
