--- a/Application/Phone/View/Shop/goodsEdit.html
+++ b/Application/Phone/View/Shop/goodsEdit.html
@@ -1,29 +1,48 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>我的生活</title>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+<extend name="template/shop_main" />
 
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/weui.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=4">
+<block name="css">
+</block>
 
-</head>
-<body>
-<div class="page-group">
-    <div class="page page-current">
+<block name="script">
+    <script src="__PUBLIC__/js/validator.min.js"></script>
+    <script>
+        var error = false;
+        $('#form').validator({
+            errorCallback: function() {
+                error = true;
+            },
+            before:function(){
+                error = false;
+            },
+            after:function(){
+                return false;
+            }
+        });
+        $('#form').submit(function(){
+            if(!error){
+                var data = $(this).serialize();
+                $.showPreloader();
+                $.post("{:UC('Shop/goodsEditCommit')}",data,function(){
+                    $.hidePreloader();
+                });
+            }
+            return false;
+        });
+    </script>
+</block>
+
+<block name="content">
+    <div class="page page-current" id="goodsEdit">
         <div class="content">
+            <form method="post" action="" id="form">
             <div class="weui_cells_title">商品名称</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="text" placeholder="请输入商品名称">
+                        <input class="weui_input" type="text"
+                               placeholder="请输入商品名称"
+                               name="name" value="{$info['name']}"
+                               required minlength="2" maxlength="20">
                     </div>
                 </div>
             </div>
@@ -32,7 +51,10 @@
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="number" pattern="[0-9]*" placeholder="请输入商品价格">
+                        <input class="weui_input" type="number"
+                               placeholder="请输入商品价格"
+                               name="price"
+                               pattern="[0-9]*" required>
                     </div>
                 </div>
             </div>
@@ -41,21 +63,9 @@
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <textarea class="weui_textarea" placeholder="请输入商品描述" rows="3"></textarea>
-                        <div class="weui_textarea_counter"><span>0</span>/200</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="weui_cells_title">商品类型</div>
-            <div class="weui_cells weui_cells_form">
-                <div class="weui_cell weui_cell_select">
-                    <div class="weui_cell_bd weui_cell_primary">
-                        <select class="weui_select" name="select1">
-                            <option selected="" value="1">请选择</option>
-                            <option value="2">QQ号</option>
-                            <option value="3">Email</option>
-                        </select>
+                        <textarea class="weui_textarea" placeholder="请输入商品描述" rows="3"
+                                  name="intro" required maxlength="200"></textarea>
+                        <div class="weui_textarea_counter">限200字</div>
                     </div>
                 </div>
             </div>
@@ -89,16 +99,9 @@
 
 
             <div class="weui_btn_area">
-                <a class="weui_btn weui_btn_primary" href="javascript:" id="showTooltips">发布</a>
+                <button type="submit" class="weui_btn weui_btn_primary" id="showTooltips">发布</button>
             </div>
+            </form>
         </div>
     </div>
-</div>
-
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
-
-<script>$.init()</script>
-</body>
-</html>
+</block>
