--- a/Application/Phone/View/Shop/goods.html
+++ b/Application/Phone/View/Shop/goods.html
@@ -10,36 +10,43 @@
 
 <block name="content">
     <div class="page page-current" id="goodslist">
-        <div class="content">
-            <empty name="list">
-                <span class="tip">您还没有发布商品呢</span>
-                <else/>
-                <volist name="list" id="info">
-                    <a class="card block" href="{:UC('Shop/goodsEdit',array('id'=>$info['id']))}">
-                        <div class="card-content">
-                            <div class="list-block media-list">
-                                <ul>
-                                    <li class="item-content">
-                                        <div class="item-media">
-                                            <img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44">
-                                        </div>
-                                        <div class="item-inner">
-                                            <div class="item-title-row">
-                                                <div class="item-title">秋香螺丝粉</div>
+        <div class="content pull-to-refresh-content">
+            <div class="pull-to-refresh-layer">
+                <div class="preloader"></div>
+                <div class="pull-to-refresh-arrow"></div>
+            </div>
+            <div>
+                <empty name="list">
+                    <span class="tip">您还没有发布商品呢</span>
+                    <else/>
+                    <volist name="list" id="info">
+                        <a class="card block" href="{:UC('Shop/goodsEdit',array('id'=>$info['id']))}" data-no-cache="true">
+                            <div class="card-content">
+                                <div class="list-block media-list">
+                                    <ul>
+                                        <li class="item-content">
+                                            <div class="item-media">
+                                                <img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44">
                                             </div>
-                                            <div class="item-subtitle">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</div>
-                                        </div>
-                                    </li>
-                                </ul>
+                                            <div class="item-inner">
+                                                <div class="item-title-row">
+                                                    <div class="item-title">{$info.name}</div>
+                                                </div>
+                                                <div class="item-subtitle">{$info.intro}</div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
-                        <div class="card-footer">
-                            <span>2015/01/15</span>
-                            <span>5评论 | 10收藏</span>
-                        </div>
-                    </a>
-                </volist>
-            </empty>
+                            <div class="card-footer">
+                                <div>{$info['commentnum']}评论 | {$info['likenum']}喜欢</div>
+                                <div>{$info.mtime|formatDate=###}</div>
+                            </div>
+                        </a>
+                    </volist>
+                </empty>
+            </div>
+
 
             <a href="javascript:;" class="extra_button" id="showActionBtn">+</a>
 
