--- a/Application/Phone/View/template/shop_main.html
+++ b/Application/Phone/View/template/shop_main.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="__PUBLIC__/SUI-Mobile/dist/css/sm.min.css">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
     <link rel="stylesheet" href="__PUBLIC__/css/weui.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=20">
+    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=25">
 
     <block name="css"></block>
 
@@ -25,7 +25,8 @@
 <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
-<script type='text/javascript' src="__PUBLIC__/js/main.js" charset='utf-8'></script>
+<script src="__PUBLIC__/js/validator.min.js"></script>
+<script type='text/javascript' src="__PUBLIC__/js/main.js?v=7" charset='utf-8'></script>
 <block name="script"></block>
 </body>
 </html>
