--- a/Application/Phone/View/Shop/goods.html
+++ b/Application/Phone/View/Shop/goods.html
@@ -26,7 +26,9 @@
                                     <ul>
                                         <li class="item-content">
                                             <div class="item-media">
-                                                <img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44">
+                                                <div class="item-img" style="background-image: url({$info['goodsfirstimg']})">
+
+                                                </div>
                                             </div>
                                             <div class="item-inner">
                                                 <div class="item-title-row">
