--- a/Application/Phone/View/Shop/index.html
+++ b/Application/Phone/View/Shop/index.html
@@ -21,7 +21,7 @@
 
             <div class="bd">
                 <div class="weui_grids">
-                    <a href="{:UC('Shop/goods')}" class="weui_grid js_grid" data-id="button">
+                    <a href="{:UC('Shop/goods')}" class="weui_grid js_grid" data-no-cache="true">
                         <div class="weui_grid_icon">
                             <img src="__PUBLIC__/images/iconfont-shangpinguanli.png" alt="">
                         </div>
@@ -29,7 +29,7 @@
                             商品
                         </p>
                     </a>
-                    <a href="{:UC('Shop/shopDetail')}" class="weui_grid js_grid" data-id="toast">
+                    <a href="{:UC('Shop/shopDetail')}" class="weui_grid js_grid" data-no-cache="true">
                         <div class="weui_grid_icon">
                             <img src="__PUBLIC__/images/iconfont-dianpuguanli.png" alt="">
                         </div>
@@ -37,7 +37,7 @@
                             店铺
                         </p>
                     </a>
-                    <a href="{:UC('Shop/collection')}" class="weui_grid js_grid" data-id="cell">
+                    <a href="{:UC('Shop/collection')}" class="weui_grid js_grid" data-no-cache="true">
                         <div class="weui_grid_icon">
                             <img src="__PUBLIC__/images/iconfont-ji.png" alt="">
                         </div>
@@ -45,7 +45,7 @@
                             妙集
                         </p>
                     </a>
-                    <a href="{:UC('Shop/effect')}" class="weui_grid js_grid" data-id="progress">
+                    <a href="{:UC('Shop/effect')}" class="weui_grid js_grid" data-no-cache="true">
                         <div class="weui_grid_icon">
                             <img src="__PUBLIC__/images/iconfont-jifen.png" alt="">
                         </div>
@@ -53,7 +53,7 @@
                             影响
                         </p>
                     </a>
-                    <a href="{:UC('Shop/fans')}" class="weui_grid js_grid" data-id="icons">
+                    <a href="{:UC('Shop/fans')}" class="weui_grid js_grid" data-no-cache="true">
                         <div class="weui_grid_icon">
                             <img src="__PUBLIC__/images/iconfont-11guanzhufensi.png" alt="">
                         </div>
@@ -61,7 +61,7 @@
                             粉丝
                         </p>
                     </a>
-                    <a href="{:UC('Public/message')}" class="weui_grid js_grid" data-id="dialog">
+                    <a href="{:UC('Public/message')}" class="weui_grid js_grid" data-no-cache="true">
                         <div class="weui_grid_icon">
                             <img src="__PUBLIC__/images/iconfont-xiaoxi.png" alt="">
                         </div>
