--- a/Application/Phone/View/Shop/collectionGoodsDel.html
+++ b/Application/Phone/View/Shop/collectionGoodsDel.html
@@ -9,11 +9,11 @@
 </block>
 
 <block name="content">
-    <div class="page page-current" id="collectionDel">
+    <div class="page page-current" id="collectionGoodsDel">
         <div class="content">
             <form action="{:UC('Shop/collectionDoDel')}">
                 <empty name="list">
-                    <span class="tip">您还没有发布商品呢</span>
+                    <span class="tip">您还没有收藏商品呢</span>
                     <else/>
                     <div class="weui_cells weui_cells_checkbox">
                         <volist name="list" id="info">
@@ -28,11 +28,11 @@
                             </label>
                         </volist>
                     </div>
+                    <div class="weui_btn_area">
+                        <button type="submit" class="weui_btn weui_btn_warn">确认删除</button>
+                    </div>
                 </empty>
 
-                <div class="weui_btn_area">
-                    <button type="submit" class="weui_btn weui_btn_warn">确认删除</button>
-                </div>
             </form>
         </div>
     </div>
