--- a/Application/Phone/View/Shop/goodsEdit.html
+++ b/Application/Phone/View/Shop/goodsEdit.html
@@ -11,7 +11,7 @@
 <block name="content">
     <div class="page page-current" id="goodsEdit">
         <div class="content">
-            <form method="post" action="" id="form">
+            <form method="post" action="{:UC('Shop/goodsEditCommit')}" id="form">
             <div class="weui_cells_title">商品名称</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
@@ -53,13 +53,18 @@
                     <div class="weui_cell_bd weui_cell_primary">
                         <div class="weui_uploader_bd">
                             <ul class="weui_uploader_files">
-                                <li class="weui_uploader_file" style="background-image:url(http://shp.qpic.cn/weixinsrc_pic/pScBR7sbqjOBJomcuvVJ6iacVrbMJaoJZkFUIq4nzQZUIqzTKziam7ibg/)"></li>
-                                <li class="weui_uploader_file weui_uploader_status" style="background-image:url(http://shp.qpic.cn/weixinsrc_pic/pScBR7sbqjOBJomcuvVJ6iacVrbMJaoJZkFUIq4nzQZUIqzTKziam7ibg/)">
-                                    <div class="weui_uploader_status_content">50%</div>
-                                </li>
+                                <volist name="goodsImgInfos" id="imgInfo">
+                                    <li class="weui_uploader_file" style="background-image:url('{$imgInfo.url}')">
+                                        <input type="hidden" name="media_ids[]" value="{$imgInfo.id}">
+                                    </li>
+                                </volist>
                             </ul>
                             <div class="weui_uploader_input_wrp">
-                                <input class="weui_uploader_input" type="file" accept="image/jpg,image/jpeg,image/png,image/gif" multiple="">
+                                <input class="weui_uploader_input" type="file" accept="image/jpg,image/jpeg,image/png,image/gif"
+                                       data-mediatype="<?php echo C('MediaType_Image');?>"
+                                       data-entitytype="<?php echo C('EntityType_Goods');?>"
+                                       data-entityid="{$info['id']}"
+                                       id="uploadFile">
                             </div>
                         </div>
                     </div>
@@ -67,13 +72,14 @@
             </div>
 
             <input type="hidden" name="id" value="{$_GET['id']}">
-
             <div class="weui_btn_area">
                 <button type="submit" class="weui_btn weui_btn_primary" id="showTooltips">
                     <if condition="$_GET['id']">重新发布<else/>发布</if>
                 </button>
             </div>
+
             </form>
+
         </div>
     </div>
 </block>
