--- a/Application/Phone/View/Shop/shopDetail.html
+++ b/Application/Phone/View/Shop/shopDetail.html
@@ -1,29 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>我的店铺</title>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+<extend name="template/shop_main" />
 
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/weui.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/main.css">
+<block name="css">
+</block>
 
-</head>
-<body>
-<div class="page-group">
-    <div class="page page-current">
+<block name="script">
+    <script>
+    </script>
+</block>
+
+<block name="content">
+    <div class="page page-current" id="shopDetail">
         <div class="content">
+            <form action="{:UC('Shop/shopEditCommit')}">
             <div class="weui_cells_title">店铺名称</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="number" pattern="[0-9]*" placeholder="请输入您的店名">
+                        <input class="weui_input" type="text" placeholder="请输入您的店名"
+                               name="name" value="{$info['name']}"
+                               required minlength="2" maxlength="20">
                     </div>
                 </div>
             </div>
@@ -32,7 +27,9 @@
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <input class="weui_input" type="number" pattern="[0-9]*" placeholder="请输入您的联系电话">
+                        <input class="weui_input" type="number" placeholder="请输入您的联系电话"
+                               name="phone" value="{$info['phone']}"
+                               required pattern="[0-9]*">
                     </div>
                 </div>
             </div>
@@ -41,8 +38,8 @@
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <textarea class="weui_textarea" placeholder="请输入地址" rows="3"></textarea>
-                        <div class="weui_textarea_counter"><span>0</span>/200</div>
+                        <textarea class="weui_textarea" placeholder="请输入地址" rows="3" name="address" required>{$info['address']}</textarea>
+                        <div class="weui_textarea_counter">200字以内</div>
                     </div>
                 </div>
             </div>
@@ -56,30 +53,20 @@
                     <div class="weui_cell_ft">重新定位</div>
                 </a>
             </div>
+            <input type="hidden" name="lat" value="{$info['lat']}">
+            <input type="hidden" name="lng" value="{$info['lng']}">
+
 
             <div class="weui_cells_title">店铺简介</div>
             <div class="weui_cells weui_cells_form">
                 <div class="weui_cell">
                     <div class="weui_cell_bd weui_cell_primary">
-                        <textarea class="weui_textarea" placeholder="请店铺简介" rows="3"></textarea>
-                        <div class="weui_textarea_counter"><span>0</span>/200</div>
+                        <textarea class="weui_textarea" placeholder="请店铺简介" rows="3" name="intro" required>{$info['intro']}</textarea>
+                        <div class="weui_textarea_counter">200字以内</div>
                     </div>
                 </div>
             </div>
 
-
-            <div class="weui_cells_title">经营范围</div>
-            <div class="weui_cells weui_cells_form">
-                <div class="weui_cell weui_cell_select">
-                    <div class="weui_cell_bd weui_cell_primary">
-                        <select class="weui_select" name="select1">
-                            <option selected="" value="1">请选择</option>
-                            <option value="2">QQ号</option>
-                            <option value="3">Email</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
 
             <div class="weui_cells_title">上传店铺照片</div>
             <div class="weui_cells weui_cells_form">
@@ -88,13 +75,6 @@
                         <div class="weui_uploader_bd">
                             <ul class="weui_uploader_files">
                                 <li class="weui_uploader_file" style="background-image:url(http://shp.qpic.cn/weixinsrc_pic/pScBR7sbqjOBJomcuvVJ6iacVrbMJaoJZkFUIq4nzQZUIqzTKziam7ibg/)"></li>
-                                <li class="weui_uploader_file" style="background-image:url(http://shp.qpic.cn/weixinsrc_pic/pScBR7sbqjOBJomcuvVJ6iacVrbMJaoJZkFUIq4nzQZUIqzTKziam7ibg/)"></li>
-                                <li class="weui_uploader_file" style="background-image:url(http://shp.qpic.cn/weixinsrc_pic/pScBR7sbqjOBJomcuvVJ6iacVrbMJaoJZkFUIq4nzQZUIqzTKziam7ibg/)"></li>
-                                <li class="weui_uploader_file weui_uploader_status" style="background-image:url(http://shp.qpic.cn/weixinsrc_pic/pScBR7sbqjOBJomcuvVJ6iacVrbMJaoJZkFUIq4nzQZUIqzTKziam7ibg/)">
-                                    <div class="weui_uploader_status_content">
-                                        <i class="weui_icon_warn"></i>
-                                    </div>
-                                </li>
                                 <li class="weui_uploader_file weui_uploader_status" style="background-image:url(http://shp.qpic.cn/weixinsrc_pic/pScBR7sbqjOBJomcuvVJ6iacVrbMJaoJZkFUIq4nzQZUIqzTKziam7ibg/)">
                                     <div class="weui_uploader_status_content">50%</div>
                                 </li>
@@ -106,20 +86,13 @@
                     </div>
                 </div>
             </div>
-
-
-
+            <input type="hidden" name="id" value="{$info['id']}">
             <div class="weui_btn_area">
-                <a class="weui_btn weui_btn_primary" href="javascript:" id="showTooltips">保存</a>
+                <button class="weui_btn weui_btn_primary" id="shopDetailBtn">更新</button>
             </div>
+            </form>
+
+
         </div>
     </div>
-</div>
-
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
-
-<script>$.init()</script>
-</body>
-</html>
+</block>
