--- a/Application/Phone/View/Shop/effectTopbar.html
+++ b/Application/Phone/View/Shop/effectTopbar.html
@@ -27,90 +27,34 @@
                 <div class="tabs">
                     <div id="tab1" class="tab active">
                         <div class="content-block">
-                            <div class="card facebook-card">
-                                <div class="card-header no-border">
-                                    <div class="facebook-avatar"><span class="topnum">1</span></div>
-                                    <div class="facebook-name">西门口何玲米粽</div>
-                                    <div class="facebook-date">3000分 <span class="fr"> 距离您300m </span></div>
+                            <volist name="list1" id="info">
+                                <div class="card facebook-card">
+                                    <div class="card-header no-border">
+                                        <div class="facebook-avatar"><span class="topnum">1</span></div>
+                                        <div class="facebook-name">西门口何玲米粽</div>
+                                        <div class="facebook-date">3000分 <span class="fr"> 距离您300m </span></div>
+                                    </div>
+                                    <div class="card-footer no-border">
+                                        北流市西门口XX对面第二铺面
+                                    </div>
                                 </div>
-                                <div class="card-footer no-border">
-                                    北流市西门口XX对面第二铺面
-                                </div>
-                            </div>
-                            <div class="card facebook-card">
-                                <div class="card-header no-border">
-                                    <div class="facebook-avatar"><span class="topnum">2</span></div>
-                                    <div class="facebook-name">西门口何玲米粽</div>
-                                    <div class="facebook-date">3000分 <span class="fr"> 距离您300米 </span></div>
-                                </div>
-                                <div class="card-footer no-border">
-                                    北流市西门口XX对面第二铺面
-                                </div>
-                            </div>
-                            <div class="card facebook-card">
-                                <div class="card-header no-border">
-                                    <div class="facebook-avatar"><span class="topnum">3</span></div>
-                                    <div class="facebook-name">西门口何玲米粽</div>
-                                    <div class="facebook-date">3000分 <span class="fr"> 距离您300米 </span></div>
-                                </div>
-                                <div class="card-footer no-border">
-                                    北流市西门口XX对面第二铺面
-                                </div>
-                            </div>
-                            <div class="card facebook-card">
-                                <div class="card-header no-border">
-                                    <div class="facebook-avatar"><span class="topnum">4</span></div>
-                                    <div class="facebook-name">西门口何玲米粽</div>
-                                    <div class="facebook-date">3000分 <span class="fr"> 距离您300米 </span></div>
-                                </div>
-                                <div class="card-footer no-border">
-                                    北流市西门口XX对面第二铺面
-                                </div>
-                            </div>
+                            </volist>
                         </div>
                     </div>
                     <div id="tab2" class="tab">
                         <div class="content-block">
-                            <div class="card facebook-card">
-                                <div class="card-header no-border">
-                                    <div class="facebook-avatar"><span class="topnum">1</span></div>
-                                    <div class="facebook-name">西门口何玲米粽</div>
-                                    <div class="facebook-date">3000分 <span class="fr"> 距离您300m </span></div>
+                            <volist name="list1" id="info">
+                                <div class="card facebook-card">
+                                    <div class="card-header no-border">
+                                        <div class="facebook-avatar"><span class="topnum">1</span></div>
+                                        <div class="facebook-name">西门口何玲米粽</div>
+                                        <div class="facebook-date">3000分 <span class="fr"> 距离您300m </span></div>
+                                    </div>
+                                    <div class="card-footer no-border">
+                                        北流市西门口XX对面第二铺面
+                                    </div>
                                 </div>
-                                <div class="card-footer no-border">
-                                    北流市西门口XX对面第二铺面
-                                </div>
-                            </div>
-                            <div class="card facebook-card">
-                                <div class="card-header no-border">
-                                    <div class="facebook-avatar"><span class="topnum">2</span></div>
-                                    <div class="facebook-name">西门口何玲米粽</div>
-                                    <div class="facebook-date">3000分 <span class="fr"> 距离您300米 </span></div>
-                                </div>
-                                <div class="card-footer no-border">
-                                    北流市西门口XX对面第二铺面
-                                </div>
-                            </div>
-                            <div class="card facebook-card">
-                                <div class="card-header no-border">
-                                    <div class="facebook-avatar"><span class="topnum">3</span></div>
-                                    <div class="facebook-name">西门口何玲米粽</div>
-                                    <div class="facebook-date">3000分 <span class="fr"> 距离您300米 </span></div>
-                                </div>
-                                <div class="card-footer no-border">
-                                    北流市西门口XX对面第二铺面
-                                </div>
-                            </div>
-                            <div class="card facebook-card">
-                                <div class="card-header no-border">
-                                    <div class="facebook-avatar"><span class="topnum">4</span></div>
-                                    <div class="facebook-name">西门口何玲米粽</div>
-                                    <div class="facebook-date">3000分 <span class="fr"> 距离您300米 </span></div>
-                                </div>
-                                <div class="card-footer no-border">
-                                    北流市西门口XX对面第二铺面
-                                </div>
-                            </div>
+                            </volist>
                         </div>
                     </div>
                 </div>
