--- a/Application/Phone/View/Public/message.html
+++ b/Application/Phone/View/Public/message.html
@@ -1,65 +1,42 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>我的生活</title>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+<extend name="template/shop_main" />
 
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/weui.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=4">
+<block name="css">
+</block>
 
-</head>
-<body>
-<div class="page-group">
+<block name="script">
+    <script>
+    </script>
+</block>
+
+<block name="content">
     <div class="page page-current">
         <div class="content">
             <div class="content native-scroll">
                 <div class="content-block-title">我的消息</div>
                 <div class="list-block media-list">
                     <ul>
-                        <li>
-                            <a href="{:UC('Public/messageDetail')}" class="item-link item-content">
-                                <div class="item-inner">
-                                    <div class="item-title-row">
-                                        <div class="item-title">每日汇报</div>
-                                        <div class="item-after">17:14</div>
+                        <volist name="list" id="info">
+                            <li>
+                                <a href="{:UC('Public/messageDetail',array('id'=>$info['id']))}" class="item-link item-content">
+                                    <div class="item-inner">
+                                        <div class="item-title-row">
+                                            <div class="item-title">{$info['title']}</div>
+                                            <div class="item-after">{$info['ctime']|formatDate}</div>
+                                        </div>
+                                        <if condition="$info['status'] eq 1">
+                                            <div class="item-subtitle">已读</div>
+                                            <else/>
+                                            <div class="item-subtitle green-text">未读</div>
+                                        </if>
+                                        <div class="item-text">{$info['subtext']}</div>
                                     </div>
-                                    <div class="item-subtitle green-text">未读</div>
-                                    <div class="item-text">此处是文本内容...</div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{:UC('Public/messageDetail')}" class="item-link item-content">
-                                <div class="item-inner">
-                                    <div class="item-title-row">
-                                        <div class="item-title">每日汇报</div>
-                                        <div class="item-after">17:14</div>
-                                    </div>
-                                    <div class="item-subtitle">已读</div>
-                                    <div class="item-text">此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容此处是文本内容</div>
-                                </div>
-                            </a>
-                        </li>
-
+                                </a>
+                            </li>
+                        </volist>
 
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
-
-<script>$.init()</script>
-</body>
-</html>
+</block>
