--- a/Application/Phone/View/Shop/collection.html
+++ b/Application/Phone/View/Shop/collection.html
@@ -25,7 +25,10 @@
                             <volist name="list" id="info">
                                 <li>
                                     <a href="{:UC('Shop/collectionInfo',array('id'=>$info['id']))}" class="item-link item-content">
-                                        <div class="item-media"><img src="{$info['faceImgUrl']}" width="80"></div>
+                                        <div class="item-media">
+                                            <div class="item-img" style="background-image: url({$info['faceImgUrl']['url']})">
+                                            </div>
+                                        </div>
                                         <div class="item-inner">
                                             <div class="item-title-row">
                                                 <div class="item-title">{$info['name']}</div>
