--- a/Application/Phone/View/Shop/collectionEdit.html
+++ b/Application/Phone/View/Shop/collectionEdit.html
@@ -42,8 +42,19 @@
                     <div class="weui_cell">
                         <div class="weui_cell_bd weui_cell_primary">
                             <div class="weui_uploader_bd">
+                                <ul class="weui_uploader_files">
+                                    <volist name="goodsImgInfos" id="imgInfo">
+                                        <li class="weui_uploader_file" style="background-image:url('{$imgInfo.url}')">
+                                            <input type="hidden" name="media_ids[]" value="{$imgInfo.id}">
+                                        </li>
+                                    </volist>
+                                </ul>
                                 <div class="weui_uploader_input_wrp">
-                                    <input class="weui_uploader_input" type="file" accept="image/jpg,image/jpeg,image/png,image/gif" multiple="">
+                                    <input class="weui_uploader_input" type="file" accept="image/jpg,image/jpeg,image/png,image/gif"
+                                           data-mediatype="<?php echo C('MediaType_Image');?>"
+                                           data-entitytype="<?php echo C('EntityType_Collection');?>"
+                                           data-entityid="{$info['id']}"
+                                           id="uploadFile">
                                 </div>
                             </div>
                         </div>
